--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,29 +1,41 @@
 # Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
-repo: upptime # The name of this repository
+owner: then77 # Your GitHub organization or username, where this repository lives
+repo: web-uptime # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
+  - name: Main Website
+    url: https://therealzzy.xyz
+    __dangerous__body_down: "Repl Unavailable"
+  - name: API Website
+    url: https://api.therealzzy.xyz
+    __dangerous__body_down: "Repl Unavailable"
+  - name: Old Website
+    url: https://site.therealzzy.xyz
+    __dangerous__body_down: "Repl Unavailable"
+  - name: Jupyter Lab
+    url: https://pylab.therealzzy.xyz
+  - name: My Shortlink Website
+    url: $REALZZY_SHORTLINK
+    __dangerous__body_down: "Repl Unavailable"
+  - name: MC Test Server
+    check: "tcp-ping"
+    url: https://play.therealzzy.xyz
+    port: 25565
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: demo.upptime.js.org
+  cname: uptime.therealzzy.xyz
   # baseUrl: /your-repo-name
-  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
+  logoUrl: https://therealzzy.xyz/icon.png
+  name: Realzzy Status
   introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
   introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
   navbar:
     - title: Status
       href: /
+    - title: Website
+      href: https://therealzzy.xyz
     - title: GitHub
       href: https://github.com/$OWNER/$REPO
 
