--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -26,7 +26,7 @@ status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   # cname: uptime.therealzzy.xyz
-  # baseUrl: /your-repo-name
+  baseUrl: /web-uptime
   logoUrl: https://therealzzy.xyz/icon.png
   name: Realzzy Status
   introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
