--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -25,8 +25,8 @@ sites:
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  # cname: uptime.therealzzy.xyz
-  baseUrl: /web-uptime
+  cname: uptime.therealzzy.xyz
+  # baseUrl: /web-uptime
   logoUrl: https://therealzzy.xyz/icon.png
   name: Realzzy Status
   introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
