--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -32,8 +32,8 @@ status-website:
   # baseUrl: /web-uptime
   logoUrl: https://therealzzy.xyz/icon.png
   name: Realzzy Status
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  introTitle: "**Realzzy Uptime Status** built using [Upptime](https://upptime.js.org) and powered by Github."
+  introMessage: "You can see all my websites, api, etc. idk if they're online or not."
   navbar:
     - title: Status
       href: /
